summative.moria.Moria.scala.error
Compilation error:
Moria:11: error: not found: value setDir
  setDir(Direction.SOUTH)
  ^Moria:11: error: not found: value Direction
  setDir(Direction.SOUTH)
         ^Moria:19: error: not found: value isAgainstWall
  while(!isAgainstWall()){
         ^