summative.moria.Moria.scala.code
def move() = {
  forward()
}


def getRidOfStones() = {
  
}

def leave() = {
	setDir(Direction.SOUTH)
  forward();left();forward()
}




def makeHisWayOut() = {
  while(!isAgainstWall()){
    move()
  }
  leave()
}